--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
                 <img class="mx-auto w-8" src="assets/bonus1.png" alt="">
                 <p>Get Bonus</p>
                 </div>
-                <div class="border p-4 text-center rounded-sm">
+                <div id="transaction-history" class="border p-4 text-center rounded-sm">
                 <img class="mx-auto w-8" src="assets/transaction1.png" alt="">
                 <p>Transaction History</p>
                 </div>
@@ -110,6 +110,18 @@
                       </div>
                     </div>
                   </div>
+             </section>
+
+             <!-- transaction section -->
+
+             <section id="transaction">
+              <h1 class="font-bold text-2xl mt-5 text-red-700 text-center">Transaction History</h1>
+
+              <!-- div for history show -->
+
+              <div id="transaction-container">
+
+              </div>
              </section>
         </header>
     </section>
